[package]
name = "banyan-api-client"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonwebtoken = "8.3.0"
openssl = "^0.10"
pem = "^2"
reqwest = { version = "^0.11", features = ["json", "stream", "multipart"], default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
url = "2.4.0"
uuid = { version = "^1.3", features = ["fast-rng", "serde", "v4"] }

[[bin]]
name = "banyan-api-client-cli"
path = "src/bin/main.rs"

[lib]
name = "banyan_api_client"
path = "src/lib.rs"
