[package]
name = "banyan-api-client"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[dependencies]
jsonwebtoken = "8.3.0"
openssl = "^0.10"
pem = "^2"
rand = "^0.8"
reqwest = { version = "^0.11", features = ["json", "stream", "multipart"], default-features = false }
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "^1.3", features = ["fast-rng", "serde", "v4"] }
futures = "^0.3"

[lib]
name = "banyan_api_client"
path = "src/lib.rs"
