[package]
name = "banyan-core-service"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[dependencies]
futures = "^0.3"
pico-args = "^0.5"
rand = "^0.8"
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }

asn1 = "^0.15"
base64 = "^0.21"
blake3 = "^1.4"
bytes = "^1"
chrono = { version = "^0.4", features = ["serde"] }
ecdsa = { version = "^0.16", features = ["signing", "verifying"] }
hmac-sha512 = "^1"
openssl = { version = "^0.10", features = ["vendored"] }
p384 = "^0.13"
pem = "^2"
phf = { version = "^0.11", features = ["macros"] }
regex = "^1.9"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
time = "^0.3"
uuid = { version = "^1.3", features = ["fast-rng", "serde", "v4"] }

axum-extra = { version = "^0.8", features = ["cookie"] }
axum = { version = "^0.6", features = ["macros", "headers", "http2", "multipart", "tracing"] }
http = "^0.2"
jsonwebtoken = "^8.3"
jwt-simple = "^0.11"
mime = "^0.3"
multer = { version = "^2", features = ["json", "tokio", "tokio-io"] }
oauth2 = "^4"
object_store = "^0.6"
reqwest = { version = "^0.11", features = ["json"], default-features = false }
sqlx = { version = "^0.7", default-features = false, features = ["macros", "migrate", "sqlite", "runtime-tokio", "chrono"] }
tower-http = { version = "^0.4", features = ["auth", "cors", "limit", "fs", "propagate-header", "request-id", "sensitive-headers", "set-header", "util", "trace", "validate-request"] }
tower = { version = "^0.4", features = ["timeout", "load-shed", "limit", "util"] }
url = "^2.4"
validify = "^1.0"

tracing = "^0.1"
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "local-time", "time", "tracing"] }
dotenvy = "0.15.7"

[dev-dependencies]
proptest = "^1.1"

[features]
fake = []
