[package]
name = "banyan-core-service"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[dependencies]
async-trait = "^0.1"
futures = "^0.3"
itertools = "^0.11"
lazy_static = "^1.4"
pico-args = "^0.5"
rand = "^0.8"
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }

asn1 = "^0.15"
blake3 = "^1.4"
bytes = "^1"
chrono = { version = "^0.4", features = ["serde"] }
hex = "^0.4"
openssl = { version = "^0.10", features = ["vendored"] }
pem = "^2"
regex = "^1.9"
ring = "^0.17"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
time = { version = "^0.3", features = ["serde"] }
uuid = { version = "^1.3", features = ["fast-rng", "serde", "v4"] }
cid = { version = "^0.10", features = ["serde-codec"] }

async-session = "^3"
axum = { version = "^0.6", features = ["macros", "headers", "http2", "multipart", "tracing"] }
handlebars = { version = "^4.4", features = ["dir_source"] }
http = "^0.2"
jsonwebtoken = "^8.3"
lettre = "^0.10"
oauth2 = "^4"
mime = "^0.3"
multer = { version = "^2", features = ["json", "tokio", "tokio-io"] }
object_store = "^0.6"
sqlx = { version = "^0.7", default-features = false, features = ["macros", "migrate", "sqlite", "runtime-tokio", "chrono"] }
tower = { version = "^0.4", features = ["timeout", "load-shed", "limit", "util"] }
tower-http = { version = "^0.4", features = ["auth", "cors", "limit", "fs", "propagate-header", "request-id", "sensitive-headers", "set-header", "util", "trace", "validate-request"] }
url = "^2.4"
validify = "^1.0"

tracing = "^0.1"
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["env-filter", "fmt", "local-time", "time", "tracing"] }

[features]
fake = []
