[package]
name = "banyan-middleware"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.5.0"
http-body = "0.4.5"
http = "0.2.7"
pin-utils = "0.1.0"
futures = "0.3.29"
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
pin-project-lite = "0.2.13"
axum = { version = "^0.6.20", features = ["headers", "http2", "macros", "multipart", "tracing"] }
tower = { version = "^0.4.13", features = ["timeout", "load-shed", "limit", "util"] }
tower-layer = "0.3.2"
futures-util = "0.3.29"

