[package]
name = "banyan-middleware"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[lib]
path = "src/lib.rs"

[dependencies]
bytes = "1.5.0"
http-body = "0.4.5"
http = "0.2.7"
pin-utils = "0.1.0"
tokio = { version = "1.34.0", features = ["sync"] }
pin-project-lite = "0.2.13"
tower-layer = "0.3.2"
tower-service = "0.3"
futures-util = "0.3.29"

