[package]
name = "banyan-object-store"
description = "Object store implementation for Banyan Services"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[lib]
path = "src/lib.rs"

[dependencies]
itertools = "^0.11"
thiserror = "^1"
url = "^2"
serde_json = "^1"
axum = { version = "^0.6" }
object_store = { version = "^0.6", features = ["aws"] }
tracing = "^0.1"