[package]
name = "banyan-staging-service"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[dependencies]
futures = "^0.3"
itertools = "^0.11"
pico-args = "^0.5"
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }

blake3 = "^1"
bytes = "^1"
cid = "^0.10"
jwt-simple = "^0.11"
mime = "^0.3"
regex = { version = "^1", default-features = false, features = ["std"] }
sha2 = "^0.10"
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
uuid = { version = "^1", features = ["fast-rng", "serde", "v4"] }
url = "^2"

axum = { version = "^0.6", features = ["headers", "http2", "macros", "multipart", "tracing"] }
http = "^0.2"
hyper = "^0.14"
multer = { version = "^2", features = ["json", "tokio", "tokio-io"] }
object_store = "^0.6"
reqwest = { version = "^0.11", default-features = false, features = ["json"] }
sqlx = { version = "^0.7", default-features = false, features = ["macros", "migrate", "runtime-tokio", "tls-rustls", "uuid"] }
tower = { version = "^0.4", features = ["timeout", "load-shed", "limit", "util"] }
tower-http = { version = "^0.4", features = ["auth", "cors", "limit", "fs", "propagate-header", "request-id", "sensitive-headers", "set-header", "util", "trace", "validate-request"] }

tracing = { version = "^0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "local-time", "time", "tracing"] }

[dev-dependencies]
bytes = "^1.4"
reqwest = { version = "^0.11", default-features = false, features = ["multipart", "stream"] }

[features]
default = ["postgres", "sqlite"]

postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
