[package]
name = "banyan-storage-provider-service"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[dependencies]
futures = "^0.3"
rand = "^0.8"
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }

serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
uuid = { version = "^1", features = ["fast-rng", "serde", "v4"] }

axum = { version = "^0.6", features = ["headers", "http2", "macros", "multipart", "tracing"] }
reqwest = { version = "^0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
sqlx = { version = "^0.7", default-features = false, features = ["macros", "migrate", "runtime-tokio", "sqlite", "tls-rustls", "uuid"] }
time = { version = "^0.3", features = ["serde"] }
tower-http = { version = "^0.4", features = ["fs"] }

tracing = { version = "^0.1", features = ["max_level_debug", "release_max_level_info"] }
tracing-appender = "^0.2"
tracing-futures = { version = "^0.2", default-features = false, features = ["std-future"] }
tracing-subscriber = { version = "^0.3", default-features = false, features = ["env-filter", "fmt", "local-time", "time", "tracing"] }
