[package]
name = "banyan-task"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-LICENSE.txt"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "^0.1"
futures = "^0.3"
thiserror = "^1"
tokio = { version = "^1", features = ["macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }

chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
time = { version = "^0.3", features = ["serde"] }
uuid = { version = "^1.3", features = ["fast-rng", "serde", "v4"] }

sqlx = { version = "^0.7", default-features = false, features = ["macros", "migrate", "sqlite", "runtime-tokio", "chrono"] }

tracing = "^0.1"
